Fixed padding on mobile

--- a/style.less
+++ b/style.less
@@ -19,9 +19,10 @@ html, body {
 	color: #921103;
 }
 .results {
-	padding: 15px 0;
+	padding-top: 15px;
+	padding-bottom: 15px;
 }
-@media (min-width: 768px) {
+@media (min-width: 500px) {
 	.container {
 		width: 500px !important;
 	}
